# bitcoin-ipc

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  checkpoint_notes.txt  config.json  docker-compose.local.yml  docker-compose.yml  reward_config.toml
.github/workflows/: bsl-client-image.yml
BTC/: BTC.json  BTC.txt
BTC/A/: A.json  keypair.yaml
BTC/B/: B.json
BTC/C/: C.json
BTC/D/: D.json
bench-plots/: bench-transfer-sizes.csv  bench-withdraw-sizes.csv  plot.py  plot_validator_size.py
benches/: README.md  measure_transfer_weight.rs  measure_withdraw_weight.rs
docker-build-client/: Dockerfile  README.md  entrypoint.sh
docker-deploy-local/: Dockerfile  Dockerfile.ipc  README.md  docker-entrypoint.sh  run-fendermint-validator.sh
docs/: bitcoin-ipc.md  deploy-local.md  env.md  ipc-cli.md
docs/demo/: create_join.md  demo.md
docs/design/: architecture.drawio
docs/diagrams/: architecture.drawio  overview.excalidraw
docs/internal/: create_join.md  curl_reqs.md
docs/specs/: addressing.md  architecture.md  benchmarking.md  dynamic-participation.md  scope-of-work.md  subnet-pk.md  transaction-details.md  transactions.md
internal/: analyze_tx.sh  balancer.sh  bitcoin_wallets.md  bootstrap.md  bootstrap_handover.sh  bootstrap_subnet.sh  btc_wallets.md  checkpoint_demo.md  checkpoint_subnet.sh  create_join.md  create_join_fund_2.md  curl_reqs.md  dynamic_participation_demo.md  join_new_validator.md  l2_block_checker.sh  miner.sh  setup_demo.sh  spin_up_subnet.sh  spin_up_subnet_a.sh  spin_up_subnet_b.sh  spin_up_subnet_full.sh
internal/demo.ipc/: btc_keystore.json  config.toml  evm_keystore.json
ipc_serde/: Cargo.toml
ipc_serde/src/: lib.rs
scripts/: balancer.sh  bootstrap_subnet_a_from_container.sh  bootstrap_subnet_b_from_container.sh  bootstrap_subnet_from_container.sh  demo_macos.sh  demo_ubuntu.sh  l1_block_checker.sh  l2_block_checker.sh  list_validators.sh  run_subnet_interactor_macos.sh  run_subnet_interactor_ubuntu.sh  setup_wallets.sh  spin_up_subnet_a.sh  spin_up_subnet_a_from_container.sh  spin_up_subnet_b.sh  spin_up_subnet_b_from_container.sh  validator_status.sh
src/: bitcoin_utils.rs  db.rs  eth_utils.rs  ipc_lib.rs  ipc_state.rs  ipc_subnet_state.rs  l1_manager.rs  lib.rs  main.rs  multisig.rs  rewards.rs  subnet_simulator.rs  test_sizes.rs  test_utils.rs  utils.rs  wallet.rs
src/easy_tester/: README.md  base.rs  db_tester.rs  error.rs  mod.rs  (+9 more)
(+48 files in other folders)
