[package]
name = "bitcoin-ipc"
version = "0.1.0"
edition = "2021"
default-run = "bitcoin-ipc"

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
bitcoin = { version = "0.32.2", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
dotenv = "0.15.0"
serde = "1.0.203"
thiserror = "1.0.61"
serde_json = "1.0.120"
hex = "0.4.3"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
jsonrpc-v2 = "0.13.0"
actix-web = "4"
actix-web-httpauth = "0.8.2"
log = "0.4.22"
env_logger = "0.11.6"
