[package]
name = "bitcoin-ipc"
version = "0.1.0"
edition = "2021"
default-run = "bitcoin-ipc"

[dependencies]
bitcoin = { version = "0.32.5", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
clap = { version = "4.5.27", features = ["derive"] }
dotenv = "0.15.0"
serde = "1.0.203"
thiserror = "1.0.61"
serde_json = "1.0.120"
hex = "0.4.3"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
jsonrpc-v2 = "0.13.0"
actix-web = "4"
actix-web-httpauth = "0.8.2"
log = "0.4.22"
env_logger = "0.11.6"
ipc_serde = { path = "ipc_serde" }
async-trait = "0.1.83"
heed = "0.21.0"
tokio-util = "0.7.13"
num-traits = "0.2.19"
num-bigint = "0.4.6"
alloy-primitives = { version = "0.8.19", features = ["serde"] }
fvm_shared = "4.5.3"
base64 = "0.22.1"

[dev-dependencies]
bitcoinconsensus = "0.106.0"
